src/components/AboutUsPage/styles.css
/* .MainAboutPage{
  background: red;
} */



.Main {
    text-align: left;
    color: black;
    font-family: 'Anton', sans-serif;
    margin: 20px;
    font-size: 50px;
}

.building_image {
    text-align: right;
    padding: 50px;
    margin: 20px;
    vertical-align: middle;
    float: left;
}

.people_icon {
    padding: 50px;
    margin: 20px;
    vertical-align: middle;
    float: center;
}



#heading {
    color: black;
    font-family: 'Anton', sans-serif;
    font-size: 50px;
    margin: 20px;
    text-align: left;
    letter-spacing: 0ch;
    line-height: 0%;
}

#heading_ig {
    color: black;
    font-family: 'Anton', sans-serif;
    font-size: 50px;
    margin: 40px;
    text-align: left;
    letter-spacing: 0ch;
    line-height: 100%;
}

#text{
    color: black;
    font-family: 'Acme', sans-serif;
    font-size: 18px;
    margin: 40px;
  
    text-align: left;
    
}

#text > li {
  color: black;
  font-family: 'Acme', sans-serif;
  font-size: 18px;

  text-align: left;

}

@media (max-width:670px) {
  .Main {
    margin-left: 10px;
  }
  #heading {
    margin-left: 10px;
  }
  #heading_ig{
    margin-left: 20px;
  }
  #text{
    margin-left: 10px;
  }
}

#stats_people {
    color: #ee2b7a;
    font-family: 'Amatic SC', cursive;
    font-size: 40px;
    vertical-align: middle;
    text-align: center;
}

#stats_event {
    color: #00a79d;
    font-family: 'Amatic SC', cursive;
    font-size: 40px;
    vertical-align: middle;
    text-align: center;
}

#stats_contrib {
    color: #f9921f;
    font-family: 'Amatic SC', cursive;
    font-size: 40px;
    vertical-align: middle;
    text-align: center;
}

#stats_proj {
    color: #1c74bc;
    font-family: 'Amatic SC', cursive;
    font-size: 40px;
    vertical-align: middle;
    text-align: center;
}

#icon_bulb {
    color: #1c74bc;
    font-size: 100px;
    vertical-align: middle;
    padding-top: 10px;
    padding-bottom: 0;
    margin-bottom: 0;
    line-height: 75%;
}

#icon_hand {
    color: #f9921f;
    font-size: 68px;
    vertical-align: middle;
    padding-top: 10px;
    padding-bottom: 0;
    margin-bottom: 0;
    line-height: 75%;
}

#icon_people {
    color: #ee2b7a;
    font-size: 100px;
    vertical-align: middle;
    padding-top: 10px;
    padding-bottom: 0;
    margin-bottom: 0;
    line-height: 50%;
}

#icon_event {
    color: #00a79d;
    font-size: 100px;
    vertical-align: middle;
    padding-top: 10px;
    padding-bottom: 0;
    margin-bottom: 0;
    line-height: 75%;
}

#text_stats {
    font-size: 22px;
    font-family: 'Acme', sans-serif;
    text-align: center;
    line-height: 30%;
}

.ig_logo {
    word-wrap: normal;
}
.Facilities{
  display: flex;
}
.doorImage{
  align-self: flex-end;
  margin-bottom: -70px;
}
.door{
  width: 400px;
  height: 400px;
}
.facilities-heading{
    margin-left: 40px;
    margin-top: 20px;
    display: flex;
    justify-content: flex-start;
    align-items: center;
  }
  
  .facilities-main-heading{  
    font-size: 50px;
    color: black;
    font-family: 'Anton', sans-serif;
    /* margin: 40px; */
    text-align: left;
    letter-spacing: 0ch;
    line-height: 0%;
  }
  
  .facilities-heading-text{
    font-size:15px;
    margin-left: 40px;
    display: flex;
    font-weight: 700;
    flex-direction: column;
    
  }
  .facilites-text{
    width: 40%;
    margin-left:40px;
    margin-top: 2%;
    text-align: justify;
    font-size: 18px;
    color: black;
    font-family: 'Acme', sans-serif;
    font-size: 18px;
    text-align: left;
    
  }
  

  .collab-heading{
    width: 90vw;
    background-image: url(./Cross.png);
    background-repeat: no-repeat; 
    background-size: 300px 200px; 
    background-position: 10vw 0px;
    display: flex;
    align-items: center;
    height: 200px;
    line-height: 50px; 
    color: black;
    font-family: 'Anton', sans-serif;
    font-size: 50px;
    margin: 40px;
    text-align: left;
  }
  
  
  .roleOfCII-heading{
    font-size: 50px;
    margin-top: 5%;
    margin-left: 40px;  
    line-height: 50px;
    font-size: 40px;
    color: black;
    font-family: 'Anton', sans-serif;
    font-size: 50px;
    /* margin: 40px; */
    text-align: left;
  }
  
  .roleOfCII-text{
    font-size: 18px;
    margin-left: 40px;
    margin-right: 5%;
    margin-top: 15px;
    text-align: justify;
    color: black;
    font-family: 'Acme', sans-serif;
    font-size: 18px;
    margin: 40px;
    text-align: left;
    
  }
  
  .images-box{
    
    display: flex;
    /* justify-content: auto; */
    /* flex-direction: auto; */
    flex-wrap: wrap;
    margin-left: 25px;
  }
 
  .images-box > img{
    height: 150px;
    padding:1%;
  }
  

  
  
  @media (max-width:670px) {
    .roleOfCII-heading{
      margin-left: 20px;
    }
    .facilities-heading{
      margin-left: 20px;
    }
    .facilities-main-heading{
      font-size: 30px;
    line-height: 30px;
    }
    .facilities-heading-text{
      margin-left: 20px;
      margin-right: 10%;
      font-size:15px;
      font-weight: 700;
    }
    .collab-heading{
      line-height: 40px;
      font-size: 40px;
      margin-left: 20px;
    }
    .Facilities{
      flex-wrap: wrap;
    }
    .doorImage{
      align-self: flex-start;
      margin-bottom: 0px;
      margin-left: -20px;
      background-color: green;
    }
    .door{
      width: 300px;
      height: 300px;
    }
    .facilites-text{
      width:50%;
      font-size: 15px;
    }
    .images-box{
      width: 90vw;
      margin-left: 20px;
     }
  }

